--- a/backend/plus/requirements.txt
+++ b/backend/plus/requirements.txt
@@ -4,6 +4,10 @@ dj-static==0.0.6
 django-cors-headers==1.1.0
 django-toolbelt==0.0.1
 gunicorn==19.3.0
+httplib2==0.9.2
 psycopg2==2.6.1
+pytz==2015.6
+six==1.10.0
 static3==0.6.1
+twilio==4.6.0
 wsgiref==0.1.2
